--- a/index.html
+++ b/index.html
@@ -81,61 +81,60 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     <p>8 items</p>
   </div>
 
-  <!-- Product grid -->
-  <div class="w3-row w3-grayscale">
+  <div class="w3-row w3">
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="/w3images/jeans1.jpg" style="width:100%">
-        <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
+        <img src="https://i.pinimg.com/564x/51/eb/81/51eb812b20865eeba52d20c805a0477b.jpg" style="width:100%">
+        <p>GoldFish Oranda<br><b>$10.99</b></p>
       </div>
       <div class="w3-container">
-        <img src="/w3images/jeans2.jpg" style="width:100%">
-        <p>Mega Ripped Jeans<br><b>$19.99</b></p>
+        <img src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9zdGF0aWMvaW1hZ2VzL3dlYnNpdGUvMjAyMi0wNS91cHdrNjIwOTMwNjItd2lraW1lZGlhLWltYWdlLWtvd2IwbWE0LmpwZw.jpg?s=0MqGvnA72SOFXE2eAP68exnTMtej05lGB7cs_gqgRTs" style="width:100%">
+        <p>Betta Fish<br><b>$8.99</b></p>
       </div>
     </div>
 
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <div class="w3-display-container">
-          <img src="/w3images/jeans2.jpg" style="width:100%">
+          <img src="https://lzd-img-global.slatic.net/g/p/3e6819fde45811b7f1992ab2ff20e661.jpg_960x960q80.jpg_.webp" style="width:100%">
           <span class="w3-tag w3-display-topleft">New</span>
           <div class="w3-display-middle w3-display-hover">
             <button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
           </div>
         </div>
-        <p>Mega Ripped Jeans<br><b>$19.99</b></p>
+        <p>Albino Blue Topaz<br><b>$5.99</b></p>
       </div>
       <div class="w3-container">
-        <img src="/w3images/jeans3.jpg" style="width:100%">
-        <p>Washed Skinny Jeans<br><b>$20.50</b></p>
+        <img src="https://filebroker-cdn.lazada.com.ph/kf/Sca5a01e839494c74a60dbc0c6ac811cbq.jpg" style="width:100%">
+        <p>Electric Blue Moscow<br><b>$5.50</b></p>
       </div>
     </div>
 
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="/w3images/jeans3.jpg" style="width:100%">
-        <p>Washed Skinny Jeans<br><b>$20.50</b></p>
+        <img src="https://jadrenaquatics.com/cdn/shop/products/guppyalbinofullred_grande.jpg?v=1639702452" style="width:100%">
+        <p>Albino Full Red<br><b>$20.50</b></p>
       </div>
       <div class="w3-container">
         <div class="w3-display-container">
-          <img src="/w3images/jeans4.jpg" style="width:100%">
+          <img src="https://5.imimg.com/data5/ANDROID/Default/2021/12/XI/OD/LN/112028672/product-jpeg-500x500.jpg" style="width:100%">
           <span class="w3-tag w3-display-topleft">Sale</span>
           <div class="w3-display-middle w3-display-hover">
             <button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
           </div>
         </div>
-        <p>Vintage Skinny Jeans<br><b class="w3-text-red">$14.99</b></p>
+        <p>Parrot Fish<br><b class="w3-text-red">$̶1̶9̶.9̶9̶  $14.99</b></p>
       </div>
     </div>
 
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="/w3images/jeans4.jpg" style="width:100%">
-        <p>Vintage Skinny Jeans<br><b>$14.99</b></p>
+        <img src="https://www.swelluk.com/media/wordpress/a588070d2a369fab30823d2a6691c552.jpg" style="width:100%">
+        <p>FLowerhorn<br><b>$14.99</b></p>
       </div>
       <div class="w3-container">
-        <img src="/w3images/jeans1.jpg" style="width:100%">
-        <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
+        <img src="https://www.aquariumfishsale.com/cdn/shop/products/Gold-Marble-Angelfish.jpg?v=1582396088" style="width:100%">
+        <p>Angel Fish<br><b>$6.99</b></p>
       </div>
     </div>
   </div>
@@ -178,12 +177,12 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 
       <div class="w3-col s4 w3-justify">
         <h4>Store</h4>
-        <p><i class="fa fa-fw fa-map-marker"></i> Company Name</p>
-        <p><i class="fa fa-fw fa-phone"></i> 0044123123</p>
-        <p><i class="fa fa-fw fa-envelope"></i> ex@mail.com</p>
+        <p><i class="fa fa-fw fa-map-marker"></i> Adinar Ornamental Fish</p>
+        <p><i class="fa fa-fw fa-phone"></i> 09457939321</p>
+        <p><i class="fa fa-fw fa-envelope"></i> Adinarornamentalfish@gmail.com</p>
         <h4>We accept</h4>
-        <p><i class="fa fa-fw fa-cc-amex"></i> Amex</p>
-        <p><i class="fa fa-fw fa-credit-card"></i> Credit Card</p>
+        <p><i class="fa fa-fw fa-cc-amex"></i>Gcash</p>
+        <p><i class="fa fa-fw fa-credit-card"></i>Visa</p>
         <br>
         <i class="fa fa-facebook-official w3-hover-opacity w3-large"></i>
         <i class="fa fa-instagram w3-hover-opacity w3-large"></i>
@@ -195,12 +194,10 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     </div>
   </footer>
 
-  <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
+  <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">ADINAR</a></div>
 
-  <!-- End page content -->
 </div>
 
-<!-- Newsletter Modal -->
 <div id="newsletter" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom" style="padding:32px">
     <div class="w3-container w3-white w3-center">
@@ -214,7 +211,6 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 </div>
 
 <script>
-// Accordion 
 function myAccFunc() {
   var x = document.getElementById("demoAcc");
   if (x.className.indexOf("w3-show") == -1) {
@@ -224,11 +220,8 @@ function myAccFunc() {
   }
 }
 
-// Click on the "Jeans" link on page load to open the accordion for demo purposes
 document.getElementById("myBtn").click();
 
-
-// Open and close sidebar
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
   document.getElementById("myOverlay").style.display = "block";
@@ -242,3 +235,5 @@ function w3_close() {
 
 </body>
 </html>
+
+
